@@ -1325,6 +1325,30 @@ throws|throws
 name|IOException
 block|{
 return|return
+name|newSearcher
+argument_list|(
+name|name
+argument_list|,
+literal|false
+argument_list|)
+return|;
+block|}
+comment|// gets a non-caching searcher
+DECL|method|newSearcher
+specifier|public
+name|SolrIndexSearcher
+name|newSearcher
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|boolean
+name|readOnly
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
 operator|new
 name|SolrIndexSearcher
 argument_list|(
@@ -1332,10 +1356,24 @@ name|this
 argument_list|,
 name|schema
 argument_list|,
-name|name
+literal|"main"
 argument_list|,
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|FSDirectory
+operator|.
+name|getDirectory
+argument_list|(
 name|getIndexDir
 argument_list|()
+argument_list|)
+argument_list|,
+name|readOnly
+argument_list|)
+argument_list|,
+literal|true
 argument_list|,
 literal|false
 argument_list|)
@@ -3809,7 +3847,7 @@ name|newest
 return|;
 block|}
 block|}
-comment|/**    * Get a {@link SolrIndexSearcher} or start the process of creating a new one.    *<p>    * The registered searcher is the default searcher used to service queries.    * A searcher will normally be registered after all of the warming    * and event handlers (newSearcher or firstSearcher events) have run.    * In the case where there is no registered searcher, the newly created searcher will    * be registered before running the event handlers (a slow searcher is better than no searcher).    *    *<p>    * If<tt>forceNew==true</tt> then    *  A new searcher will be opened and registered regardless of whether there is already    *    a registered searcher or other searchers in the process of being created.    *<p>    * If<tt>forceNew==false</tt> then:<ul>    *<li>If a searcher is already registered, that searcher will be returned</li>    *<li>If no searcher is currently registered, but at least one is in the process of being created, then    * this call will block until the first searcher is registered</li>    *<li>If no searcher is currently registered, and no searchers in the process of being registered, a new    * searcher will be created.</li>    *</ul>    *<p>    * If<tt>returnSearcher==true</tt> then a {@link RefCounted}&lt;{@link SolrIndexSearcher}&gt; will be returned with    * the reference count incremented.  It<b>must</b> be decremented when no longer needed.    *<p>    * If<tt>waitSearcher!=null</tt> and a new {@link SolrIndexSearcher} was created,    * then it is filled in with a Future that will return after the searcher is registered.  The Future may be set to    *<tt>null</tt> in which case the SolrIndexSearcher created has already been registered at the time    * this method returned.    *<p>    * @param forceNew           if true, force the open of a new index searcher regardless if there is already one open.    * @param returnSearcher     if true, returns a {@link SolrIndexSearcher} holder with the refcount already incremented.    * @param waitSearcher       if non-null, will be filled in with a {@link Future} that will return after the new searcher is registered.    * @throws IOException    */
+comment|/**    * Get a {@link SolrIndexSearcher} or start the process of creating a new one.    *<p>    * The registered searcher is the default searcher used to service queries.    * A searcher will normally be registered after all of the warming    * and event handlers (newSearcher or firstSearcher events) have run.    * In the case where there is no registered searcher, the newly created searcher will    * be registered before running the event handlers (a slow searcher is better than no searcher).    *    *<p>    * These searchers contain read-only IndexReaders. To access a non read-only IndexReader,    * see newSearcher(String name, boolean readOnly).    *    *<p>    * If<tt>forceNew==true</tt> then    *  A new searcher will be opened and registered regardless of whether there is already    *    a registered searcher or other searchers in the process of being created.    *<p>    * If<tt>forceNew==false</tt> then:<ul>    *<li>If a searcher is already registered, that searcher will be returned</li>    *<li>If no searcher is currently registered, but at least one is in the process of being created, then    * this call will block until the first searcher is registered</li>    *<li>If no searcher is currently registered, and no searchers in the process of being registered, a new    * searcher will be created.</li>    *</ul>    *<p>    * If<tt>returnSearcher==true</tt> then a {@link RefCounted}&lt;{@link SolrIndexSearcher}&gt; will be returned with    * the reference count incremented.  It<b>must</b> be decremented when no longer needed.    *<p>    * If<tt>waitSearcher!=null</tt> and a new {@link SolrIndexSearcher} was created,    * then it is filled in with a Future that will return after the searcher is registered.  The Future may be set to    *<tt>null</tt> in which case the SolrIndexSearcher created has already been registered at the time    * this method returned.    *<p>    * @param forceNew           if true, force the open of a new index searcher regardless if there is already one open.    * @param returnSearcher     if true, returns a {@link SolrIndexSearcher} holder with the refcount already incremented.    * @param waitSearcher       if non-null, will be filled in with a {@link Future} that will return after the new searcher is registered.    * @throws IOException    */
 DECL|method|getSearcher
 specifier|public
 name|RefCounted
@@ -4065,8 +4103,22 @@ name|schema
 argument_list|,
 literal|"main"
 argument_list|,
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|FSDirectory
+operator|.
+name|getDirectory
+argument_list|(
 name|getIndexDir
 argument_list|()
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+argument_list|,
+literal|true
 argument_list|,
 literal|true
 argument_list|)
